//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  username String [unique]
  phoneNumber String [unique, note: 'Using country code as prefix without the \'+\' sign, e.g., \'628xxxx\'']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  emailVerified Boolean [not null]
  image String
  password String [not null]
  role UserRole [not null, default: 'User']
  userProfile user_profiles
  kost kosts [not null]
  tenant tenants [not null]
  payment payments [not null]
  sessions sessions [not null]
  accounts accounts [not null]
}

Table verifications {
  id String [pk]
  identifier String [not null]
  value String [not null]
  createdAt DateTime
  updatedAt DateTime
  expiresAt DateTime [not null]
}

Table accounts {
  id String [pk]
  accountId String [not null]
  providerId String [not null]
  userId String [not null]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  accessToken String
  refreshToken String
  idToken String
  scope String
  password String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  user users [not null]
}

Table sessions {
  id String [pk]
  token String [unique, not null]
  userId String [not null]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  expiresAt DateTime [not null]
  ipAddress String
  userAgent String
  user users [not null]
}

Table user_profiles {
  id String [pk]
  userId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String [not null]
  lastName String
  address String [not null]
  city String [not null]
  state String [not null, note: 'state or province, e.g., \'California\', \'Jakarta\'']
  user users [not null]
}

Table kosts {
  id String [pk]
  ownerId String [not null]
  slug String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  address String [not null]
  description String
  rooms rooms [not null]
  owner users [not null]
}

Table rooms {
  id String [pk]
  kostId String [not null]
  slug String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  number String [not null, note: 'Room name, e.g., \'Room A\', \'Room B\', etc.']
  floor Int [not null, default: 1]
  tenant tenants
  kost kosts [not null]
}

Table tenants {
  id String [pk]
  userId String [not null]
  roomId String [unique, not null]
  startDate DateTime [not null]
  endDate DateTime
  bills bills [not null]
  user users [not null]
  room rooms [not null]
}

Table bills {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tenantId String [not null]
  title String [not null]
  amount Float [not null]
  dueDate DateTime [not null]
  isPaid Boolean [not null, default: false]
  payment payments
  bill_penalty bill_penalties [not null]
  tenant tenants [not null]
}

Table bill_penalties {
  id String [pk]
  billId String [not null]
  penaltyId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bill bills [not null]
  penalty penalties [not null]
}

Table penalties {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Float [not null]
  reason String [not null]
  bill_penalties bill_penalties [not null]
}

Table payments {
  id String [pk]
  billId String [unique, not null]
  userId String [not null]
  method String [not null, note: 'payment method, e.g., \'bank_transfer\', \'cash\', \'qris\', etc.']
  amount Float [not null]
  paidAt DateTime [default: `now()`, not null]
  bill bills [not null]
  user users [not null]
}

Enum UserRole {
  Owner
  User
  Admin
}

Ref: accounts.userId > users.id [delete: Cascade]

Ref: sessions.userId > users.id [delete: Cascade]

Ref: user_profiles.userId - users.id

Ref: kosts.ownerId > users.id

Ref: rooms.kostId > kosts.id

Ref: tenants.userId > users.id

Ref: tenants.roomId - rooms.id

Ref: bills.tenantId > tenants.id

Ref: bill_penalties.billId > bills.id

Ref: bill_penalties.penaltyId > penalties.id

Ref: payments.billId - bills.id

Ref: payments.userId > users.id